# telegram-bot

./: README.md  pyproject.toml  setup.py
tg_api/: client.py  config.py  errors.py  interactions.py  methods.py  objects.py  utils.py
